--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     <button onclick="generateLink()">Generar Enlace</button>
     <textarea id="output-url" readonly placeholder="El enlace generado aparecerá aquí"></textarea>
     <button class="copy-btn" onclick="copyToClipboard()">Copiar Enlace</button>
-    <div class="footer">Genera un enlace encriptado para: <strong>https://embed-pro.blogspot.com</strong></div>
+    <div class="footer">Genera un enlace encriptado para: <strong>https://embed-pro.onrender.com</strong></div>
   </div>
 
   <script>
-    const baseEmbedUrl = "https://embed-pro.blogspot.com/2025/01/embed.html?r=";
+    const baseEmbedUrl = "https://embed-pro.onrender.com/v?r=";
 
     function generateLink() {
       const inputUrl = document.getElementById("input-url").value.trim();
